Tests/CompilerTests/negative/invalid-binding-declaration.hylo
struct A {}

fun g(a: A) {
  let (x, y): A = a
  let (abc: z) = (bca: a)
}
